--- a/theme/admin/assets/css/style.css
+++ b/theme/admin/assets/css/style.css
@@ -62,6 +62,7 @@
     4.14 Position Css
 / ================================= Table Of Contents =================================== **/
 @import url("https://fonts.googleapis.com/css2?family=Inter:wght@100..900&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans:ital,wght@0,100..900;1,100..900&family=Nunito+Sans:ital,opsz,wght@0,6..12,200..1000;1,6..12,200..1000&family=Roboto+Flex:opsz,wght@8..144,100..1000&display=swap');
 :root {
   --default-font: ;
   --h1: clamp(2rem, 1.2rem + 4vw, 4.5rem);
@@ -15950,7 +15951,8 @@ td.fc-header-center {
 
 .sidebar-menu li a {
   padding: 0.625rem 0.75rem;
-  font-weight: 700;
+  font-weight: 600;
+  font-family: "Roboto Flex";
   display: flex;
   align-items: center;
   color: var(--text-secondary-light);
@@ -16017,6 +16019,7 @@ td.fc-header-center {
 .sidebar-menu .sidebar-menu-group-title {
   color: var(--neutral-500);
   font-weight: 600;
+  font-family: "Roboto Flex";
   margin-block: 0.5rem;
   font-size: 0.875rem;
 }
@@ -16033,6 +16036,7 @@ td.fc-header-center {
 .dashboard-main {
   margin-inline-start: 0;
   display: flex;
+  /* font-family: "Roboto Flex"; */
   flex-wrap: wrap;
   flex-flow: column;
   min-height: 100vh;
@@ -16191,7 +16195,7 @@ div.dt-container .dt-paging .dt-paging-button.current {
   background-color: #fff;
   border: 1px solid #aaa;
   border-radius: 4px;
-  width: 363px !important;
+  width: 372px !important;
   height: 44px !important;
 }
 
@@ -16209,9 +16213,7 @@ div.dt-container .dt-paging .dt-paging-button.current {
   width: 350px !important;
   height: 44px !important;
 }
-.cls{
-  width: 1000px !important;
-}
+
 
 /* শুধুমাত্র .product-select এর select2 dropdown এর জন্য */
 .product-select + .select2-container--default .select2-selection--multiple {
@@ -16338,7 +16340,7 @@ div.dt-container .dt-paging .dt-paging-button.current {
 /* Target the entire scrollbar */
 ::-webkit-scrollbar {
   width: 3px;              /* width of vertical scrollbar */
-  height: 2px;  
+  height: 3px;  
   border-radius: 1px;           /* height of horizontal scrollbar */
 }
 ::-webkit-scrollbar-thumb {
