--- a/theme/admin/assets/css/style.css
+++ b/theme/admin/assets/css/style.css
@@ -286,7 +286,7 @@
   --purple-light-white: rgba(132, 90, 223, 0.25);
   --pink-light-white: rgba(250, 54, 230, 0.25);
   --base: #fff;
-  --brand: var(--primary-600);
+  --brand: var(--dark-1);
   --button-secondary: var(--primary-50);
   --black: var(--dark-2);
   --white: var(--base);
@@ -16358,7 +16358,7 @@ div.dt-container .dt-paging .dt-paging-button.current {
     justify-content: center;
     padding: 10px 10px;
 }
-.pagination .page-link {
+.pagination-btn {
     color: #333;
     border: 1px solid #dee2e6;
     background-color: #fff;
@@ -16368,14 +16368,14 @@ div.dt-container .dt-paging .dt-paging-button.current {
     font-weight: 500;
     transition: all 0.2s ease-in-out;
 }
-.pagination .page-link:hover {
+.pagination-btn:hover {
     color: #fff;
     background-color: #0d6efd; /* soft blue */
     border-color: #0d6efd;
     text-decoration: none;
     box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
 }
-.pagination .page-item.active .page-link {
+ .page-item.active {
     color: #fff;
     background-color: #0d6efd;
     border-color: #0d6efd;
@@ -16384,7 +16384,7 @@ div.dt-container .dt-paging .dt-paging-button.current {
 }
 
 /* Disabled links (Previous / Next) */
-.pagination .page-item.disabled .page-link {
+.page-item.disabled {
     color: #bbb;
     background-color: #f8f9fa;
     border-color: #dee2e6;
